--- a/bottom.html
+++ b/bottom.html
@@ -1,4 +1,7 @@
     </main>
-    <footer></footer>
+    <footer>
+      <p><a href=https://github.com/kemitchell/reference.kemitchell.com/blob/master/BASENAME.md>Source on GitHub</a></p>
+      <p>&copy; Kyle E. Mitchell</p>
+    </footer>
   </body>
 </html>
