--- a/bottom.html
+++ b/bottom.html
@@ -1,6 +1,7 @@
     </main>
     <footer>
       <p>&copy; Kyle E. Mitchell</p>
+      <p><a href=/>Index</a></p>
       <p><a href=https://github.com/kemitchell/reference.kemitchell.com/blob/master/pages/BASENAME.md>Source on GitHub</a></p>
     </footer>
   </body>
