--- a/bottom.html
+++ b/bottom.html
@@ -1,6 +1,6 @@
     </main>
     <footer>
-      <p>&copy; Kyle E. Mitchell</p>
+      <p>Original content of this site &copy; Kyle E. Mitchell</p>
       <p><a href=/>reference.kemitchell.com</a></p>
       <p><a href=https://github.com/kemitchell/reference.kemitchell.com/blob/master/pages/BASENAME.md>Source on GitHub</a></p>
     </footer>
